<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ShowBorrowsDetails">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/borrowing_ticket"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/form_code"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/txtFormCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/student_code"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/txtStudentCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/book_code"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/txtBookCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/borrow_read"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/txtBorrowRead"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/date_create"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/txtDateCreate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="10/11/1999"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/date_pay"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtDateCreate"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/txtDatePay"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="14/10/1999"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_btn"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@+id/btnRefuse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <Button
        android:id="@+id/btnRefuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_btn"
        android:text="@string/refuse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/btnConfirm"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/rules"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>