<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/alto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:text="@string/form_code"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtFormCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textView5"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/date_create"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtDataCreate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/textView5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView9"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/date_pay"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPayDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/textView9"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView20"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:text="@string/status"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/customs_btn_details"
            android:text="@string/detail"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>