<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".AddPublish">

    <ImageView
        android:id="@+id/imagePublishCreate"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_130sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agency" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imagePublishCreate"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPublishName"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imagePublishCreate"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="567dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePublishCreate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_500sdp"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce"
                android:textColor="@color/blue"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:id="@+id/edtIntroPublish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtIntroPublish"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/information"
                android:textColor="@color/blue"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView11"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtPublishAddress"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView11"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView13"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView13"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtPhonePublish"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edtPublishAddress"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView14"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView14"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/fax"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtFaxPublish"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edtPhonePublish"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView15"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView15"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtEmailPublish"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edtFaxPublish"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView16"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/textView16"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:text="@string/website"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtWebsitePublish"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edtEmailPublish"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView17"
                android:ems="10"
                android:inputType="textPersonName" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/publish_code"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imagePublishCreate"
        app:layout_constraintTop_toBottomOf="@+id/edtPublishName" />

    <EditText
        android:id="@+id/edtPublishCode"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imagePublishCreate"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

</androidx.constraintlayout.widget.ConstraintLayout>